example/secondfile/objects/Rate_Determinants__c.object
<CustomObject>
    <fields>
        <fullName>BEID__c</fullName>
        <label>BEID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Service_Type__c</fullName>
        <label>Component Service Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Code__c</fullName>
        <label>Determinant Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Description__c</fullName>
        <label>Determinant Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Set_IDD__c</fullName>
        <formula>HYPERLINK(&quot;/apex/RateDeterminantTierDisplay?Id=&quot;&amp;Id, Determinant_Set_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Determinant Set ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Set_ID__c</fullName>
        <label>Determinant Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_String__c</fullName>
        <label>Determinant String</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Determinant_Value_Description__c</fullName>
        <label>Determinant Value Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Value__c</fullName>
        <label>Determinant Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Determinant_Set_ID__c</fullName>
        <label>Fixed Determinant Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBI_Number__c</fullName>
        <formula>Rate_PBI__r.PBI_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PBI Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_PBI__c</fullName>
        <label>Rate-PBI</label>
        <referenceTo>Rate_PBI__c</referenceTo>
        <relationshipLabel>Rate-Determinants</relationshipLabel>
        <relationshipName>Rate_Determinants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SOC_Country_Code__c</fullName>
        <label>SOC Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Rate-Determinants</label>
    <nameField>
        <displayFormat>Determinant-{000000}</displayFormat>
        <label>Determinants Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate-Determinants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>